--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://via.placeholder.com/900x600" alt="Coche de lujo">
+                <img src="https://placehold.co/900x600/0066ff/white" alt="Coche de lujo">
             </div>
         </section>
 
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="why-us-image">
-                <img src="https://via.placeholder.com/900x600" alt="BMW de lujo">
+                <img src="https://placehold.co/600x400/4ECDC4/white" alt="BMW de lujo">
                 <div class="experience-badge">Más de 15 Años de Experiencia</div>
             </div>
         </section>
