--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h1>Conduce Tus Sueños con Nuestra Colección Premium de Coches</h1>
+                <h1>Tu Coche Premium Te Espera</h1>
                 <p>Experimenta la libertad de la carretera abierta con nuestra extensa flota de vehículos de lujo y económicos. Reserva tu viaje perfecto hoy.</p>
                 <div class="cta-buttons">
                     <button class="primary-btn">Reservar Ahora</button>
