--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://placehold.co/900x600/blue/white?id=hero01" alt="Coche de lujo">
+                <img src="https://images.unsplash.com/photo-1617788138017-80ad40651399?auto=format&fit=crop&w=900&h=600&q=80" alt="Tesla Model S de lujo">
             </div>
         </section>
 
