--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarRent - Servicio Premium de Alquiler de Coches</title>
+    <title>CarRent - Servicio Premium de Alquiler de Coches 2025</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
